--- a/algorithms.html
+++ b/algorithms.html
@@ -835,3 +835,51 @@ In the illustration the numbers 1, 2, and 8 are the "givens". They can not be ch
             return 'Try again!'
       return 'Finished!'
 For those who don't know the game, here are some information about rules and how to play Sudoku: http://en.wikipedia.org/wiki/Sudoku and http://www.sudokuessentials.com/
+
+**************
+1/20/2017
+Merge Sort
+// my implementation of merge sort done in javaScript -- Happy New Year!
+
+function mergeSort(arr){
+	if (arr.length<2){
+		return arr;
+	}
+
+	var left = mergeSort(arr.slice(0, Math.ceil(arr.length/2)));
+	var right = mergeSort(arr.slice(Math.ceil(arr.length/2)));
+	// console.log(arr.slice(0, Math.ceil(arr.length/2)));
+	// console.log(arr.slice(Math.ceil(arr.length/2)));
+
+	var out = [];
+
+	for (var i=0, l=0, r=0; i<(left.length+right.length); i++){
+		if (left[l] === undefined && right[r] === undefined){
+			break;
+		}
+		if (left[l] && right[r]){
+			if (left[l] < right[r]){
+				out.push(left[l]);
+				l++;
+			} else if (left[l] >= right[r]){
+				out.push(right[r]);
+				r++;
+			}
+		}
+		else if (left[l] === undefined && right[r] !== undefined){
+			out.push(right[r]);
+			r++;
+		}
+		else if (right[r] === undefined && left[l] !== undefined){
+			out.push(left[l]);
+			l++;
+		}
+	}
+	return out;
+}
+
+ken = [1,3,5,6,2,0,11,12,5,100,24];
+// ken = [5,200,8,2];
+console.log(mergeSort(ken));
+
+**************
